--- a/package.json
+++ b/package.json
@@ -1,31 +1,44 @@
 {
   "name": "@chainat/handy",
-  "version": "1.0.2",
   "description": "Handy commands",
+  "version": "2.0.0",
   "main": "index.js",
   "repository": {
     "url": "https://github.com/chainat/handy.git"
   },
+  "bin": {
+    "handy": "./bin/cli.js"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "./node_modules/.bin/eslint ."
+    "lint": "./node_modules/.bin/eslint .",
+    "lint-fix": "./node_modules/.bin/eslint . --fix",
+    "start": "node ./index.js"
   },
   "keywords": [],
   "author": "Chainat Wongtapan <chainat@gmail.com>",
   "license": "ISC",
-  "bin": {
-    "handy": "./bin/cli.js"
-  },
   "devDependencies": {
     "eslint": "^5.15.3",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.16.0"
   },
   "dependencies": {
-    "bcrypt-nodejs": "0.0.3",
-    "generate-password": "^1.4.1",
+    "ansi-colors": "^3.2.4",
+    "await-to-js": "^2.1.1",
+    "cli-table": "^0.3.1",
+    "dotenv": "^7.0.0",
+    "js-yaml": "^3.13.1",
+    "lodash": "^4.17.11",
+    "mkdirp": "^0.5.1",
     "moment-timezone": "^0.5.23",
+    "mysql": "^2.17.1",
+    "prettyjson": "^1.2.1",
+    "prompts": "^2.3.0",
+    "simple-git": "^1.113.0",
     "uuid": "^3.3.2",
+    "ws": "^7.2.1",
+    "yamljs": "^0.3.0",
     "yargs": "^13.2.1"
   }
 }
